Fixed issue where animation would cause overflow

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ html {
 .section {
     height: 100vh;
     min-height: 400px;
+    overflow: hidden;
 }
 
 .fix-height {
